Added interface for launch and log to web app

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -14,6 +14,7 @@
 				<th>Pipeline</th>
 				<th>Status</th>
 				<th></th>
+				<th></th>
 
 				<tr ng-repeat="w in workflows">
 					<td>
@@ -22,7 +23,10 @@
 					<td>{{w.pipeline}}</td>
 					<td>{{w.status}}</td>
 					<td class="text-center">
-						<span class="button-icon" ng-click="deleteWorkflow(w)">&times;</span>
+						<a href="" ng-click="launch(w)">Launch</a>
+					</td>
+					<td class="text-center">
+						<span class="button-icon" ng-click="delete(w)">&times;</span>
 					</td>
 				</tr>
 			</table>
