--- a/client/views/workflow.html
+++ b/client/views/workflow.html
@@ -35,5 +35,13 @@
 				</div>
 			</form>
 		</div>
+
+		<div class="panel panel-default" ng-show="workflow.log">
+			<div class="panel-heading">
+				<h3 class="panel-title">Log</h3>
+			</div>
+
+			<pre>{{workflow.log}}</pre>
+		</div>
 	</div>
 </div>
