--- a/client/views/workflow.html
+++ b/client/views/workflow.html
@@ -13,6 +13,13 @@
 					</div>
 				</div>
 
+				<div class="form-group" ng-class="{'has-error': form.pipeline.$touched && form.pipeline.$invalid}">
+					<label class="col-sm-3 control-label">Pipeline</label>
+					<div class="col-sm-6">
+						<input class="form-control" name="pipeline" ng-model="workflow.pipeline" required/>
+					</div>
+				</div>
+
 				<div class="form-group" ng-show="workflow.status">
 					<label class="col-sm-3 control-label">Status</label>
 					<div class="col-sm-6">
@@ -20,10 +27,20 @@
 					</div>
 				</div>
 
-				<div class="form-group" ng-class="{'has-error': form.pipeline.$touched && form.pipeline.$invalid}">
-					<label class="col-sm-3 control-label">Pipeline</label>
+				<div class="form-group">
+					<label class="col-sm-3 control-label">Input Data</label>
 					<div class="col-sm-6">
-						<input class="form-control" name="pipeline" ng-model="workflow.pipeline" required/>
+						<p class="form-control-static" ng-show="workflow.input_data.length == 0">none</p>
+						<p class="form-control-static" ng-repeat="f in workflow.input_data">{{f}}</p>
+					</div>
+				</div>
+
+				<div class="form-group" ng-show="workflow.output_data">
+					<label class="col-sm-3 control-label">Output Data</label>
+					<div class="col-sm-6">
+						<p class="form-control-static">
+							<a ng-href="/api/workflows/{{workflow.id}}/download" download>Download</a>
+						</p>
 					</div>
 				</div>
 
@@ -32,6 +49,28 @@
 				<div class="text-center">
 					<button type="button" class="btn btn-default" ng-disabled="form.$invalid" ng-click="save(workflow)">Save</button>
 					<a href="/">Cancel</a>
+				</div>
+			</form>
+		</div>
+
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">Input Data</h3>
+			</div>
+
+			<form class="panel-body form-horizontal" name="input_data">
+				<div class="form-group">
+					<label class="col-sm-3 control-label">Files</label>
+					<div class="col-sm-6">
+						<p class="form-control-static" ng-show="uploader.queue.length == 0">none</p>
+						<p class="form-control-static" ng-repeat="item in uploader.queue">{{item.file.name}}</p>
+
+						<input type="file" nv-file-select="" uploader="uploader" multiple/>
+					</div>
+				</div>
+
+				<div class="text-center">
+					<button type="button" class="btn btn-default" ng-click="uploader.uploadAll()">Upload</button>
 				</div>
 			</form>
 		</div>
