Moved launch button to workflow view

--- a/client/views/workflow.html
+++ b/client/views/workflow.html
@@ -118,6 +118,10 @@
 					</div>
 				</div>
 
+				<div class="text-center">
+					<button type="button" class="btn btn-default" ng-click="launch(workflow.id)">Launch</button>
+				</div>
+
 				<hr>
 
 				<pre>{{workflow.log}}</pre>
