--- a/client/views/workflow.html
+++ b/client/views/workflow.html
@@ -119,7 +119,8 @@
 				</div>
 
 				<div class="text-center">
-					<button type="button" class="btn btn-default" ng-click="launch(workflow.id)">Launch</button>
+					<button type="button" class="btn btn-default" ng-disabled="workflow.status == 'running'" ng-click="workflow.status != 'running' && launch(workflow.id)">Launch</button>
+					<button type="button" class="btn btn-default" ng-disabled="workflow.status == 'running'" ng-click="workflow.status != 'running' && resume(workflow.id)">Resume</button>
 				</div>
 
 				<hr>
