--- a/client/views/workflow.html
+++ b/client/views/workflow.html
@@ -34,6 +34,13 @@
 					</div>
 				</div>
 
+				<div class="form-group" ng-class="{'has-error': form.profiles.$touched && form.profiles.$invalid}">
+					<label class="col-sm-3 control-label">Profiles</label>
+					<div class="col-sm-6">
+						<input class="form-control" name="profiles" ng-model="workflow.profiles" required/>
+					</div>
+				</div>
+
 				<div class="form-group" ng-class="{'has-error': form.revision.$touched && form.revision.$invalid}">
 					<label class="col-sm-3 control-label">Revision</label>
 					<div class="col-sm-6">
