--- a/client/views/workflow.html
+++ b/client/views/workflow.html
@@ -87,6 +87,7 @@
 							<a ng-href="/api/workflows/{{workflow.id}}/download" download>Download</a>
 						</p>
 					</div>
+                                        <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
 				</div>
 
 				<hr>
@@ -117,6 +118,7 @@
 				<div class="text-center">
 					<button type="button" class="btn btn-default" ng-click="uploader.uploadAll()">Upload</button>
 				</div>
+                                <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
 			</form>
 		</div>
 
@@ -147,3 +149,5 @@
 		</div>
 	</div>
 </div>
+
+
