--- a/client/views/home.html
+++ b/client/views/home.html
@@ -19,7 +19,7 @@
 
 				<tr ng-repeat="w in workflows">
 					<td>
-						<a ng-href="#!/workflow/{{w.id}}">{{w.id.slice(0, 8)}}</a>
+						<a ng-href="#!/workflow/{{w._id}}">{{w._id.slice(0, 8)}}</a>
 					</td>
 					<td>{{w.date_created | date:'short'}}</td>
 					<td>{{w.name}}</td>
