--- a/client/views/task.html
+++ b/client/views/task.html
@@ -1,12 +1,10 @@
-<div class="row">
-	<div class="col-sm-8 col-sm-offset-2">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">Task</h3>
-			</div>
+<div class="row justify-content-center">
+	<div class="col-sm-8">
+		<div class="card">
+			<h6 class="card-header">Task</h6>
 
-			<div class="panel-body">
-				<pre>{{task | json}}</pre>
+			<div class="card-body">
+				<pre class="border rounded p-2">{{task | json}}</pre>
 			</div>
 		</div>
 	</div>
