--- a/client/views/workflow.html
+++ b/client/views/workflow.html
@@ -1,89 +1,121 @@
-<div class="row">
-	<div class="col-sm-8 col-sm-offset-2">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">Workflow</h3>
-			</div>
+<div class="row justify-content-center">
+	<div class="col-sm-6">
+		<div class="card mb-4">
+			<h6 class="card-header">Workflow</h6>
 
-			<form class="panel-body form-horizontal" name="form">
-				<div class="form-group" ng-show="workflow._id != '0'">
-					<label class="col-sm-3 control-label">ID</label>
-					<div class="col-sm-6">
-						<p class="form-control-static">{{workflow._id}}</p>
+			<form class="card-body" name="form">
+				<div class="form-group row" ng-show="workflow._id != '0'">
+					<label class="col-sm-3 col-form-label">ID</label>
+					<div class="col-sm-9">
+						<p class="form-control-plaintext">{{workflow._id}}</p>
 					</div>
 				</div>
 
-				<div class="form-group" ng-show="workflow._id != '0'">
-					<label class="col-sm-3 control-label">Date Created</label>
-					<div class="col-sm-6">
-						<p class="form-control-static">{{workflow.date_created | date:'short'}}</p>
+				<div class="form-group row" ng-show="workflow._id != '0'">
+					<label class="col-sm-3 col-form-label">Date Created</label>
+					<div class="col-sm-9">
+						<p class="form-control-plaintext">{{workflow.date_created | date:'short'}}</p>
 					</div>
 				</div>
 
-				<div class="form-group">
-					<label class="col-sm-3 control-label">Name</label>
-					<div class="col-sm-6">
-						<input class="form-control" name="name" ng-model="workflow.name"/>
+				<div class="form-group row">
+					<label class="col-sm-3 col-form-label">Name</label>
+					<div class="col-sm-9">
+						<input
+							class="form-control"
+							name="name"
+							ng-model="workflow.name"
+						/>
 					</div>
 				</div>
 
-				<div class="form-group" ng-class="{'has-error': form.pipeline.$touched && form.pipeline.$invalid}">
-					<label class="col-sm-3 control-label">Pipeline</label>
-					<div class="col-sm-6">
-						<input class="form-control" name="pipeline" ng-model="workflow.pipeline" required/>
+				<div class="form-group row">
+					<label class="col-sm-3 col-form-label">Pipeline</label>
+					<div class="col-sm-9">
+						<input
+							class="form-control"
+							ng-class="{'is-invalid': form.pipeline.$touched && form.pipeline.$invalid}"
+							name="pipeline"
+							ng-model="workflow.pipeline"
+							required
+						/>
 					</div>
 				</div>
 
-				<div class="form-group" ng-class="{'has-error': form.profiles.$touched && form.profiles.$invalid}">
-					<label class="col-sm-3 control-label">Profiles</label>
-					<div class="col-sm-6">
-						<input class="form-control" name="profiles" ng-model="workflow.profiles" required/>
+				<div class="form-group row">
+					<label class="col-sm-3 col-form-label">Profiles</label>
+					<div class="col-sm-9">
+						<input
+							class="form-control"
+							ng-class="{'is-invalid': form.profiles.$touched && form.profiles.$invalid}"
+							name="profiles"
+							ng-model="workflow.profiles"
+							required
+						/>
 					</div>
 				</div>
 
-				<div class="form-group" ng-class="{'has-error': form.revision.$touched && form.revision.$invalid}">
-					<label class="col-sm-3 control-label">Revision</label>
-					<div class="col-sm-6">
-						<input class="form-control" name="revision" ng-model="workflow.revision" required/>
+				<div class="form-group row">
+					<label class="col-sm-3 col-form-label">Revision</label>
+					<div class="col-sm-9">
+						<input
+							class="form-control"
+							ng-class="{'is-invalid': form.revision.$touched && form.revision.$invalid}"
+							name="revision"
+							ng-model="workflow.revision"
+							required
+						/>
 					</div>
 				</div>
 
-				<div class="form-group" ng-class="{'has-error': form.input_dir.$touched && form.input_dir.$invalid}">
-					<label class="col-sm-3 control-label">Input Directory</label>
-					<div class="col-sm-6">
-						<input class="form-control" name="input_dir" ng-model="workflow.input_dir" required/>
+				<div class="form-group row">
+					<label class="col-sm-3 col-form-label">Input Directory</label>
+					<div class="col-sm-9">
+						<input
+							class="form-control"
+							ng-class="{'is-invalid': form.input_dir.$touched && form.input_dir.$invalid}"
+							name="input_dir"
+							ng-model="workflow.input_dir"
+							required
+						/>
 					</div>
 				</div>
 
-				<div class="form-group" ng-class="{'has-error': form.output_dir.$touched && form.output_dir.$invalid}">
-					<label class="col-sm-3 control-label">Output Directory</label>
-					<div class="col-sm-6">
-						<input class="form-control" name="output_dir" ng-model="workflow.output_dir" required/>
+				<div class="form-group row">
+					<label class="col-sm-3 col-form-label">Output Directory</label>
+					<div class="col-sm-9">
+						<input
+							class="form-control"
+							ng-class="{'is-invalid': form.output_dir.$touched && form.output_dir.$invalid}"
+							name="output_dir"
+							ng-model="workflow.output_dir"
+							required
+						/>
 					</div>
 				</div>
 
-				<div class="form-group" ng-show="workflow._id != '0'">
-					<label class="col-sm-3 control-label">Input Files</label>
-					<div class="col-sm-6">
-						<p class="form-control-static" ng-show="workflow.input_files.length == 0">none</p>
-						<p class="form-control-static" ng-repeat="f in workflow.input_files">{{f}}</p>
+				<div class="form-group row" ng-show="workflow._id != '0'">
+					<label class="col-sm-3 col-form-label">Input Files</label>
+					<div class="col-sm-9">
+						<p class="form-control-plaintext" ng-show="workflow.input_files.length == 0">none</p>
+						<p class="form-control-plaintext" ng-repeat="f in workflow.input_files">{{f}}</p>
 					</div>
 				</div>
 
-				<div class="form-group" ng-show="workflow._id != '0'">
-					<label class="col-sm-3 control-label">Output Files</label>
-					<div class="col-sm-6">
-						<p class="form-control-static" ng-show="workflow.output_files.length == 0">none</p>
-						<p class="form-control-static" ng-repeat="f in workflow.output_files">
+				<div class="form-group row" ng-show="workflow._id != '0'">
+					<label class="col-sm-3 col-form-label">Output Files</label>
+					<div class="col-sm-9">
+						<p class="form-control-plaintext" ng-show="workflow.output_files.length == 0">none</p>
+						<p class="form-control-plaintext" ng-repeat="f in workflow.output_files">
 							<a ng-href="/api/workflows/{{workflow._id}}/download?path={{f}}" download>{{f}}</a>
 						</p>
 					</div>
 				</div>
 
-				<div class="form-group" ng-show="workflow.output_data">
-					<label class="col-sm-3 control-label">Output Data</label>
-					<div class="col-sm-6">
-						<p class="form-control-static">
+				<div class="form-group row" ng-show="workflow.output_data">
+					<label class="col-sm-3 col-form-label">Output Data</label>
+					<div class="col-sm-9">
+						<p class="form-control-plaintext">
 							<a ng-href="/api/workflows/{{workflow._id}}/download" download>Download</a>
 						</p>
 					</div>
@@ -92,58 +124,54 @@
 				<hr>
 
 				<div class="text-center">
-					<button type="button" class="btn btn-default" ng-disabled="form.$invalid" ng-click="save(workflow)">Save</button>
-					<a href="/">Cancel</a>
+					<button type="button" class="btn btn-outline-dark" ng-disabled="form.$invalid" ng-click="save(workflow)">Save</button>
+					<a href="/" class="btn btn-link">Cancel</a>
 				</div>
 			</form>
 		</div>
 
-		<div class="panel panel-default" ng-show="workflow._id != '0'">
-			<div class="panel-heading">
-				<h3 class="panel-title">Input Data</h3>
-			</div>
+		<div class="card mb-4" ng-show="workflow._id != '0'">
+			<h6 class="card-header">Input Data</h6>
 
-			<form class="panel-body form-horizontal" name="input_files">
-				<div class="form-group">
-					<label class="col-sm-3 control-label">Files</label>
-					<div class="col-sm-6">
-						<p class="form-control-static" ng-show="uploader.queue.length == 0">none</p>
-						<p class="form-control-static" ng-repeat="item in uploader.queue">{{item.file.name}}</p>
+			<form class="card-body form-horizontal" name="input_files">
+				<div class="form-group row">
+					<label class="col-sm-3 col-form-label">Files</label>
+					<div class="col-sm-9">
+						<p class="form-control-plaintext" ng-show="uploader.queue.length == 0">none</p>
+						<p class="form-control-plaintext" ng-repeat="item in uploader.queue">{{item.file.name}}</p>
 
 						<input type="file" nv-file-select="" uploader="uploader" multiple/>
 					</div>
 				</div>
 
 				<div class="text-center">
-					<button type="button" class="btn btn-default" ng-click="uploader.uploadAll()">Upload</button>
+					<button type="button" class="btn btn-outline-dark" ng-click="uploader.uploadAll()">Upload</button>
 				</div>
 			</form>
 		</div>
 
-		<div class="panel panel-default" ng-show="workflow._id != '0'">
-			<div class="panel-heading">
-				<h3 class="panel-title">Execution</h3>
-			</div>
+		<div class="card mb-4" ng-show="workflow._id != '0'">
+			<h6 class="card-header">Execution</h6>
 
-			<form class="panel-body form-horizontal" name="execution">
-				<div class="form-group" ng-show="workflow.status">
-					<label class="col-sm-3 control-label">Status</label>
-					<div class="col-sm-6">
-						<p class="form-control-static text-{{STATUS_COLORS[workflow.status]}}">
+			<form class="card-body form-horizontal" name="execution">
+				<div class="form-group row" ng-show="workflow.status">
+					<label class="col-sm-3 col-form-label">Status</label>
+					<div class="col-sm-9">
+						<p class="form-control-plaintext text-{{STATUS_COLORS[workflow.status]}}">
 							<strong>{{workflow.status}}</strong>
 						</p>
 					</div>
 				</div>
 
 				<div class="text-center">
-					<button type="button" class="btn btn-default" ng-disabled="workflow.status == 'running'" ng-click="workflow.status != 'running' && launch(workflow._id)">Launch</button>
-					<button type="button" class="btn btn-default" ng-disabled="workflow.status == 'running'" ng-click="workflow.status != 'running' && resume(workflow._id)">Resume</button>
-					<button type="button" class="btn btn-default" ng-disabled="workflow.status != 'running'" ng-click="workflow.status == 'running' && cancel(workflow._id)">Cancel</button>
+					<button type="button" class="btn btn-outline-dark" ng-disabled="workflow.status == 'running'" ng-click="workflow.status != 'running' && launch(workflow._id)">Launch</button>
+					<button type="button" class="btn btn-outline-dark" ng-disabled="workflow.status == 'running'" ng-click="workflow.status != 'running' && resume(workflow._id)">Resume</button>
+					<button type="button" class="btn btn-outline-dark" ng-disabled="workflow.status != 'running'" ng-click="workflow.status == 'running' && cancel(workflow._id)">Cancel</button>
 				</div>
 
 				<hr>
 
-				<pre>{{workflow.log}}</pre>
+				<pre class="border rounded p-2">{{workflow.log}}</pre>
 			</form>
 		</div>
 	</div>
