--- a/client/views/workflows.html
+++ b/client/views/workflows.html
@@ -7,6 +7,13 @@
 				<a href="#!/workflows/0">Create workflow</a>
 			</div>
 
+			<div class="card-body">
+				<div class="button-group">
+					<button class="btn btn-light" ng-disabled="page == 0" ng-click="page > 0 && query(page - 1)">newer</button>
+					<button class="btn btn-light" ng-click="query(page + 1)">older</button>
+				</div>
+			</div>
+
 			<table class="table mb-0">
 				<th scope="col">ID</th>
 				<th scope="col">Date Created</th>
