--- a/client/views/task.html
+++ b/client/views/task.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
 	<div class="col-sm-8">
-		<div class="card">
+		<div class="card mb-4">
 			<h6 class="card-header">Task</h6>
 
 			<div class="card-body">
