--- a/client/views/workflows.html
+++ b/client/views/workflows.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col">
-		<div class="card">
+		<div class="card mb-4">
 			<h6 class="card-header">Workflows</h6>
 
 			<div class="card-body">
