--- a/client/views/workflow.html
+++ b/client/views/workflow.html
@@ -106,7 +106,7 @@
 					<div class="col-sm-9">
 						<p class="form-control-plaintext" ng-show="workflow.input_files.length == 0">none</p>
 						<p class="form-control-plaintext" ng-repeat="f in workflow.input_files">
-							<a ng-href="/api/workflows/{{workflow._id}}/download?path={{f}}" download>{{f}}</a>
+							<a ng-href="api/workflows/{{workflow._id}}/download?path={{f}}" download>{{f}}</a>
 						</p>
 					</div>
 				</div>
@@ -116,7 +116,7 @@
 					<div class="col-sm-9">
 						<p class="form-control-plaintext" ng-show="workflow.output_files.length == 0">none</p>
 						<p class="form-control-plaintext" ng-repeat="f in workflow.output_files">
-							<a ng-href="/api/workflows/{{workflow._id}}/download?path={{f}}" download>{{f}}</a>
+							<a ng-href="api/workflows/{{workflow._id}}/download?path={{f}}" download>{{f}}</a>
 						</p>
 					</div>
 				</div>
@@ -125,7 +125,7 @@
 					<label class="col-sm-3 col-form-label">Output Data</label>
 					<div class="col-sm-9">
 						<p class="form-control-plaintext">
-							<a ng-href="/api/workflows/{{workflow._id}}/download" download>Download</a>
+							<a ng-href="api/workflows/{{workflow._id}}/download" download>Download</a>
 						</p>
 					</div>
 				</div>
