--- a/client/views/tasks.html
+++ b/client/views/tasks.html
@@ -6,21 +6,14 @@
 			<form class="card-body" name="form">
 				<div class="form-group row">
 					<div class="col-sm-2">
-						<button type="button" class="btn btn-light" ng-disabled="page == 0" ng-click="page > 0 && query(page - 1)">newer</button>
-						<button type="button" class="btn btn-light" ng-click="query(page + 1)">older</button>
+						<button type="button" class="btn btn-light" ng-disabled="page == 0" ng-click="page > 0 && query_tasks(page - 1)">newer</button>
+						<button type="button" class="btn btn-light" ng-click="query_tasks(page + 1)">older</button>
 					</div>
-					<div class="col-sm-6">
-						<input
-							class="form-control"
-							ng-class="{'is-invalid': form.pipeline.$touched && form.pipeline.$invalid}"
-							name="pipeline"
-							ng-model="query_pipeline"
-							required
-							placeholder="Pipeline"
-						/>
+					<div class="col-sm-6" ng-show="pipelines">
+						<select class="form-control" ng-model="pipeline" ng-options="p for p in pipelines" required></select>
 					</div>
-					<div class="col-sm-2">
-						<button type="button" class="btn btn-block btn-outline-dark" ng-disabled="querying" ng-click="!querying && query_csv(query_pipeline)">
+					<div class="col-sm-2" ng-show="pipelines">
+						<button type="button" class="btn btn-block btn-outline-dark" ng-disabled="querying" ng-click="!querying && query_csv(pipeline)">
 							<span ng-show="querying" class="spinner-border spinner-border-sm"></span>
 							<span ng-show="!querying">Query</span>
 						</button>
