--- a/client/views/model.html
+++ b/client/views/model.html
@@ -47,6 +47,13 @@
 						<select class="form-control" ng-model="model_output" ng-options="p for p in process_columns[process_name]"></select>
 					</div>
 				</div>
+
+				<div class="text-center">
+					<button type="button" class="btn btn-outline-dark" ng-disabled="training" ng-click="!training && train(pipeline, process_name, model_inputs, model_output)">
+						<span ng-show="training" class="spinner-border spinner-border-sm"></span>
+						<span ng-show="!training">Train</span>
+					</button>
+				</div>
 			</form>
 		</div>
 
@@ -55,6 +62,14 @@
 
 			<div class="card-body">
 				<pre class="pre-scrollable border rounded p-2">{{pipeline_data | json}}</pre>
+			</div>
+		</div>
+
+		<div class="card mb-4" ng-show="train_results">
+			<h6 class="card-header">Training Results</h6>
+
+			<div class="card-body">
+				<pre class="pre-scrollable border rounded p-2">{{train_results | json}}</pre>
 			</div>
 		</div>
 	</div>
