Cleaned up API endpoints

--- a/client/views/tasks.html
+++ b/client/views/tasks.html
@@ -9,17 +9,17 @@
 						<button type="button" class="btn btn-light" ng-disabled="page == 0" ng-click="page > 0 && query_tasks(page - 1)">newer</button>
 						<button type="button" class="btn btn-light" ng-click="query_tasks(page + 1)">older</button>
 					</div>
-					<div class="col-sm-6" ng-show="pipelines">
+					<div class="col-sm-5" ng-show="pipelines">
 						<select class="form-control" ng-model="pipeline" ng-options="p for p in pipelines" required></select>
 					</div>
-					<div class="col-sm-2" ng-show="pipelines">
-						<button type="button" class="btn btn-block btn-outline-dark" ng-disabled="querying" ng-click="!querying && query_pipeline(pipeline)">
-							<span ng-show="querying" class="spinner-border spinner-border-sm"></span>
-							<span ng-show="!querying">Query</span>
+					<div class="col-sm-3" ng-show="pipelines">
+						<button type="button" class="btn btn-block btn-outline-dark" ng-disabled="archiving" ng-click="!archiving && archive(pipeline)">
+							<span ng-show="archiving" class="spinner-border spinner-border-sm"></span>
+							<span ng-show="!archiving">Create Archive</span>
 						</button>
 					</div>
-					<div class="col-sm-2" ng-show="query_success">
-						<a class="btn btn-block btn-outline-dark" ng-href="api/tasks/pipelines/{{pipeline}}/download" download>Download</a>
+					<div class="col-sm-2" ng-show="archive_success">
+						<a class="btn btn-block btn-outline-dark" ng-href="api/tasks/archive/{{pipeline}}/download" download>Download</a>
 					</div>
 				</div>
 			</form>
